Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef char CHAR;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;
typedef struct
{
    ULONG  ctrlflags;           //User writes message configuration options
    USHORT flag1;               //Card writes message flag 1
    USHORT flag2;               //Card writes message flag 2
    USHORT errflags;            //Card writes error flags
    USHORT actflags;            //Card writes activity flags
    USHORT resptime1;           //Card writes response time 1
    USHORT resptime2;           //Card writes response time 2
    USHORT datacount;           //Card writes data count
    USHORT resv7;               //Reserved field
    ULONG  timetag;             //Card writes time tag
    ULONG  elapsetime;          //Card writes elapsed time
    USHORT resv12;              //Reserved field
    USHORT resv13;              //Reserved field
    USHORT resv14;              //Reserved field
    USHORT resv15;              //Reserved field
    USHORT resv16;              //Reserved field
    USHORT resv17;              //Reserved field
    USHORT resv18;              //Reserved field
    USHORT resv19;              //Reserved field
    USHORT cwd1;                //User writes command word 1
    USHORT cwd2;                //User writes command word 2
    USHORT swd1;                //Card writes status word 1
    USHORT swd2;                //Card writes status word 2
    USHORT data[32];            //User writes data words
    USHORT extra[8];            //User writes extra words
} XMITFIELDS;
typedef XMITFIELDS * LPXMITFIELDS;
/**
*
*  C13 Driver functions.
*
**/

C13DRVAPI ERRVAL __stdcall C13_BCConfig(ULONG configval,HCARD handleval);
C13DRVAPI LISTADDR __stdcall C13_BCCreateList(ULONG listconfigval,INT count,ULONG msgconfigval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_BCCreateMsg(ULONG configval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedFrame(ULONG timeval,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedMsg(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI SCHNDX __stdcall C13_BCSchedRetry(USHORT condition,USHORT retries,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BCTransmitMsg(LPXMITFIELDS xmitfields,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_BCTransmitMsgEx(LPXMITFIELDS xmitfields,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardClose(HCARD handleval);
C13DRVAPI HCARD __stdcall C13_CardOpen(INT cardnum);
C13DRVAPI VOID __stdcall C13_CardReset(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CardStart(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_CardStop(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_ErrorCtrl(ULONG ctrlval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_ErrorDefine(ULONG defineval,USHORT errvalue,INT countval,USHORT wordpos,USHORT bitpos,HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ErrorSent(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_ErrorTagBC(BOOL tagval,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_ErrorTagRT(BOOL tagval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI INT __stdcall C13_ListDataRd(LPUSHORT buf,INT count,LISTADDR listaddr,HCARD handleval);
C13DRVAPI INT __stdcall C13_ListDataWr(LPUSHORT buf,INT count,LISTADDR listaddr,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_MonBlkRd(LPUSHORT buf,ULONG bufcount,LPULONG blkcnt,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_MonBlkRdEx(LPUSHORT buf,ULONG bufcount,ULONG maxblkcnt,LPULONG blkcnt,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_MonConfig(ULONG configval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_MonFilterSA(INT taval,ULONG rcvsamask,ULONG xmtsamask,ULONG rcvmcmask,ULONG xmtmcmask,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_MonFilterTA(ULONG tamask,HCARD handleval);
C13DRVAPI BOOL __stdcall C13_MonIsRunning(HCARD handleval);
C13DRVAPI USHORT __stdcall C13_MonRd(LPUSHORT buf,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MsgDataRd(LPUSHORT buf,INT count,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI VOID __stdcall C13_MsgDataWr(LPUSHORT buf,INT count,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_MsgFieldRd(USHORT fieldtype,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_MsgFieldWr(ULONG fieldval,USHORT fieldtype,MSGADDR msgaddr,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_PlayConfig(ULONG configval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_PlayWr(LPUSHORT buf,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_RTConfig(ULONG configval,INT taval,HCARD handleval);
C13DRVAPI LISTADDR __stdcall C13_RTCreateList(ULONG listconfigval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_RTCreateMsg(ULONG configval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_RTGetMsg(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_RTSWDWr(USHORT swdval,INT taval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_ValPackCWD(INT TAval,INT TRflag,INT SAval,INT WCval);
C13DRVAPI VOID __stdcall C13_ValUnpackCWD(USHORT CWDval,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT WCval);
/**
*
*  Internal functions used by the C13 Driver.
*
**/

C13DRVAPI ULONG __stdcall C13_AddrDSP(ULONG addr);
C13DRVAPI ULONG __stdcall C13_AddrHost(ULONG addr);
C13DRVAPI LPSTR __stdcall C13_AsciiCat(LPSTR strdest,LPCSTR strsrc);
C13DRVAPI INT __stdcall C13_AsciiCmpi(LPSTR str1,LPSTR str2);
C13DRVAPI LPSTR __stdcall C13_AsciiCpy(LPSTR strdest,LPCSTR strsrc);
C13DRVAPI INT __stdcall C13_AsciiFromNibble(CHAR ch);
C13DRVAPI LPSTR __stdcall C13_AsciiFromVal(ULONG value,LPSTR asciistr,INT numbits,INT radixval);
C13DRVAPI LPSTR __stdcall C13_AsciiInc(LPSTR asciistr);