Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32NET.CS


        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCConfig(UInt32 configval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCCreateList@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_BCCreateList(UInt32 listconfigval, Int32 count, UInt32 msgconfigval, UInt16 cwd1, UInt16 cwd2, ref UInt16 data, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCCreateMsg@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_BCCreateMsg(UInt32 configval, UInt16 cwd1, UInt16 cwd2, ref UInt16 data, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedFrame@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedFrame(UInt32 timeval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedMsg@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedMsg(UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCSchedRetry@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCSchedRetry(UInt16 condition, UInt16 retries, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCTransmitMsg@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCTransmitMsg(ref XMITFIELDS xmitfieldsval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_BCTransmitMsgEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_BCTransmitMsgEx(ref XMITFIELDS xmitfieldsval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardClose(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardOpen@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_CardOpen(Int32 cardnum);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_CardReset(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardStart(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CardStop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CardStop(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ErrorCtrl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ErrorCtrl(UInt32 ctrlval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ErrorDefine@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ErrorDefine(UInt32 defineval, UInt16 errvalue, Int32 countval, UInt16 wordpos, UInt16 bitpos, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ErrorSent@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ErrorSent(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ErrorTagBC@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ErrorTagBC(Int32 tagval, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ErrorTagRT@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ErrorTagRT(Int32 tagval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListDataRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ListDataRd(ref UInt16 buf, Int32 count, UInt32 listaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ListDataWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ListDataWr(ref UInt16 buf, Int32 count, UInt32 listaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonBlkRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_MonBlkRd(ref UInt16 buf, UInt32 bufcount, ref UInt32 blkcnt, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonBlkRdEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_MonBlkRdEx(ref UInt16 buf, UInt32 bufcount, UInt32 maxblkcnt, ref UInt32 blkcnt, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_MonConfig(UInt32 configval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonFilterSA@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_MonFilterSA(Int32 taval, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonFilterTA@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_MonFilterTA(UInt32 tamask, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonIsRunning@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_MonIsRunning(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MonRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_MonRd(ref UInt16 buf, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgDataRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MsgDataRd(ref UInt16 buf, Int32 count, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgDataWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_MsgDataWr(ref UInt16 buf, Int32 count, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgFieldRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_MsgFieldRd(UInt16 fieldtype, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_MsgFieldWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_MsgFieldWr(UInt32 fieldval, UInt16 fieldtype, UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_PlayConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_PlayConfig(UInt32 configval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_PlayWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_PlayWr(ref UInt16 buf, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RTConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_RTConfig(UInt32 configval, Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RTCreateList@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_RTCreateList(UInt32 listconfigval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RTCreateMsg@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_RTCreateMsg(UInt32 configval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RTGetMsg@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_RTGetMsg(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_RTSWDWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_RTSWDWr(UInt16 swdval, Int32 taval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ValPackCWD@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_ValPackCWD(Int32 taval, Int32 trflag, Int32 saval, Int32 wcval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ValUnpackCWD@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_ValUnpackCWD(UInt16 cwdval, ref Int32 taval, ref Int32 trflag, ref Int32 saval, ref Int32 wcval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AddrDSP@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_AddrDSP(UInt32 addr);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AddrHost@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_AddrHost(UInt32 addr);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiCat@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C13_AsciiCat(ref string strdest, ref string strsrc);
        public static string C13_AsciiCat(ref string strdest, ref string strsrc) { return Marshal.PtrToStringAnsi(_C13_AsciiCat(ref strdest, ref strsrc)); }
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiCmpi@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_AsciiCmpi(ref string str1, ref string str2);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiCpy@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C13_AsciiCpy(ref string strdest, ref string strsrc);
        public static string C13_AsciiCpy(ref string strdest, ref string strsrc) { return Marshal.PtrToStringAnsi(_C13_AsciiCpy(ref strdest, ref strsrc)); }
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiFromNibble@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_AsciiFromNibble(char ch);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiFromVal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C13_AsciiFromVal(UInt32 value, ref string asciistr, Int32 numbits, Int32 radixval);
        public static string C13_AsciiFromVal(UInt32 value, ref string asciistr, Int32 numbits, Int32 radixval) { return Marshal.PtrToStringAnsi(_C13_AsciiFromVal(value, ref asciistr, numbits, radixval)); }
        [DllImport("C13W32.DLL", EntryPoint = "_C13_AsciiInc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C13_AsciiInc(ref string asciistr);
        public static string C13_AsciiInc(ref string asciistr) { return Marshal.PtrToStringAnsi(_C13_AsciiInc(ref asciistr)); }
